Fixed alignment of text in "famous legumes"
added borders to photographs

--- a/css/main.css
+++ b/css/main.css
@@ -75,7 +75,8 @@ h2 {
 div {
   background-color: #dc8252;
   overflow: hidden;
-  border: 1px solid #d05c2e;
+  border-top: 1px solid #d05c2e;
+  border-bottom: 1px solid #d05c2e;
   clear: right;
 
 }
@@ -84,34 +85,48 @@ p {
   font-family: 'Merriweather';
   margin: 1em;
   font-weight: 300rem;
-  font-size: 0.75rem;
+  font-size: 1rem;
 }
 
 .inset-left {
   float: left;
   width: 10%;
   margin: 15px;
+  border: 0px;
+
 }
 
 .inset-right {
   float: right;
   width: 10%;
   margin: 15px;
+  border: 0px;
+
+}
+
+img {
+  border: 1px solid #cccccc;
+
 }
 
 .inset-corn {
   width: 100%;
-  margin: 0px;
+  margin: 0em;
+  padding: 0em;
+  border: 0px;
 }
 
 .inset-rice {
   width: 50%;
   float: left;
+  padding: 0em;
+  border: 0px;
 }
 
 .inset-oats {
   width: 50%;
   float: right;
+  border: 0px;
 }
 
 .corn {
@@ -121,7 +136,6 @@ p {
   text-align: center;
   margin: 0em;
   padding: 0em 0em 1.5em 0em;
-
 }
 
 .rice {
@@ -157,16 +171,17 @@ p {
   float: right;
   width: 35%;
   margin-right: 15px;
-  padding: 0.5em;
+  margin-left: 15px;
+  padding: 0em;
 
 }
 
 .inset-left4 {
   width: 35%;
   float: right;
-  margin-right: 15px;
+  margin: 15px;
   clear: right;
-  padding: 0.5em;
+  padding: 0em;
 }
 
 .p2 {
@@ -198,35 +213,40 @@ footer {
 
 .inset-peanuts {
   width: 35%;
-  margin-right: 1em;
-  padding: 0.5em;
+  margin-bottom: 1em;
+  padding: 0em;
   float: left;
 }
 
 .inset-beans {
   width: 35%;
-  margin-right: 1em;
-  padding: 0.5em;
+  margin-bottom: 1em;
+  padding: 0em;
   clear: left;
   float: left;
 }
 
 .inset-lentils {
   width: 35%;
-  margin-right: 1em;
-  padding: 0.5em;
+  margin-bottom: 1em;
+  padding: 0em;
+  clear: left;
+  float: left;
 }
 
 
 
 .line1 {
-  /*float: right;*/
+  float: left;
+  margin: 0em 0em 0em 1em;
 }
 
 .line2 {
-  /*clear: left;*/
+  float: left;
+  margin: 0em 0em 0em 1em;
 }
 
 .line3 {
-  /*float: right;*/
+  float: left;
+  margin: 0em 0em 0em 1em;
 }
